--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <div class="info">   
         <p class="tituloseccion"> Experiencia</p>
 
-        <p class="infoinfo">Estudios terciarios en "Iset 18", además en cursos online de programación WEB y desarrollo de videojuegos (Pyhthon, HTML, CSS, Java, Javascript). Actualmente estudiante de desarrollo de videojuegos e inteligente artificial en la universidad UAI. 
+        <p class="infoinfo">Cursos online de programación web y desarrollo de videojuegos (Pyhthon, HTML, CSS). Estudios artísticos y de fotografía en Iset 18. Actualmente estudiante en la carrera de desarrollo de videojuegos e inteligencia artificial en la universidad UAI de Rosario. 
         </p><br>
     </div>
 
     <div class="info">   
         <p class="tituloseccion"> Aptitudes y pasatiempos</p>
         <p class="tituloinfo"> Aptitudes:</p>
-        <p class="infoinfo"> Habil para resolver problemas, me es cómodo trabajar en grupo y compartir ideas, me gusta aprender y ayudar.</p><br>
+        <p class="infoinfo">Habil para resolver problemas, me gusta trabajar en grupo y compartir ideas. Busco aprender, mejorar y ayudar en lo posible.</p><br>
         <p class="tituloinfo"> Pasatiempos:</p>
         <span>Videojuegos</span> <span>Programación</span> <span>Fotografia</span> <span>Flora y fauna</span>
     </div>
